# onboard-car-software

./: .dockerignore  .gitmodules  CMakeLists.txt  Dockerfile  README.md  docker-compose.yml
apps/deserializer/: CMakeLists.txt  entrypoint.sh
apps/deserializer/src/: main.cpp
apps/streamer/: requirements.txt
apps/streamer/src/: activity.py  buffer.py  config.py  eventhub_producer.py  main.py  push_fake_data.py  redis_reader.py  streamer.py
docker/: deserializer.Dockerfile  redis.Dockerfile  redis.conf  streamer.Dockerfile
src/: main.cpp
